<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activities.SubmitActivity">

    <EditText
        android:id="@+id/submit__first_name"
        android:layout_width="171dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/edit_text_shape"
        android:ems="10"
        android:hint="@string/first_name_hint"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_banner" />

    <ImageView
        android:id="@+id/header_image"
        android:layout_width="406dp"
        android:layout_height="68dp"
        android:layout_marginTop="24dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gads_header" />

    <TextView
        android:id="@+id/submit_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="8dp"
        android:text="@string/project_submission_banner"
        android:textColor="#FF9800"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_image" />

    <EditText
        android:id="@+id/submit_last_name"
        android:layout_width="180dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/edit_text_shape"
        android:ems="10"
        android:hint="@string/last_name_hint"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/submit__first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/submit__first_name"
        app:layout_constraintTop_toTopOf="@+id/submit__first_name"
        android:autofillHints="" />

    <EditText
        android:id="@+id/submit_email_address"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edit_text_shape"
        android:ems="10"
        android:hint="@string/email_address_hint"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit__first_name" />

    <EditText
        android:id="@+id/submit_github"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edit_text_shape"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/submit_hint"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_email_address" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/submit_project_button_shape"
        android:text="@string/submit_button_hint"
        android:textAllCaps="false"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_github" />

</androidx.constraintlayout.widget.ConstraintLayout>